# agentteam

./: README.md  prek.toml  pyproject.toml  ruff.toml  setup.py  setup.sh
.github/scripts/: affected_tests.py  check_imports.py
.github/workflows/: gatekeeper.yml
.github/workflows/scripts/: affected_tests.py
agents/: pyproject.toml
agents/src/agents/: __init__.py  crew.py  main.py
ci/: pyproject.toml
ci/src/ci/: __init__.py  affected_tests.py
orchestration/: pyproject.toml
orchestration/src/orchestration/: __init__.py
security/: pyproject.toml
security/src/security/: docker.py
security/tests/: test_docker.py
