[project]
name = "agentteam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["crewai", "crewai-tools", "langchain-openai", "docker"]
optional-dependencies = { dev = [
    "prek",
    "ruff",
    "ty",
    "typer",
], "test" = [
    "pytest",
    "pytest-xdist",
] }
