[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthias Rath", email = "matze29894@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "crewai[google-genai]",
    "crewai-tools"
]

[project.scripts]
run_agents = "agents.main:run"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
