[project]
name = "ci"
version = "0.1.0"
description = "Scripts for CI/CD"
readme = "README.md"
authors = [
    { name = "Matthias Rath", email = "matze29894@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ci = "ci:main"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
